# qt-empty

./: .gitignore  CMakeLists.txt  README.md
source/: MainWindow.cc
